# rocketship

./: CMakeLists.txt  Doxyfile  Makefile  README.md  requirements.txt
docs/macos_sdk/: readme.txt
include/: biquad.h  common_def.h  dsp_processing.h  dsplib.h  fixed_point_math.h  jumpml_nr.h  jumpml_nr_tuning.h  nn_layers.h  nn_layers_tools.h  nnlib_fixedpt.h  nnlib_float.h  nnlib_types.h  noise_reduction.h  resample.h  signalsifter.h  signalsifter_config.h  signalsifter_monitor.h  tanh_table.h  tanh_table_S16.h  utils.h
models/: convert_model.py  convert_ptj_to_onnx.py  create_ptj.py  draw_system.py  gen_tanh_table.py  print_config.py  run_prediction.py
models/model/: simple_gru.py
models/pretrained_models/: jumpmlnr_2M.json5  jumpmlnr_330k.json5  jumpmlnr_330k.ptj  jumpmlnr_700k.json5  jumpmlnr_700k.ptj
models/utils/: compare_wave_files.py  utils.py
scripts/: build_jumpml_sdk.bat  build_macos_sdk.sh  convert_raw_audio.sh  denoise.sh  makefile_macos_sdk.mk  resample.sh  run_testnr_tests.sh
src/: biquad.c  dsp_processing.c  dsplib.c  jumpml_nr.c  nn_layers_fixedpt.c  nn_layers_float.c  nn_layers_tools.c  nnlib_fixedpt_generic.c  nnlib_float.c  nnlib_float_neon.c  noise_reduction.c  resample.c  signalsifter.c  utils.c
test/compare_audio/: main.c
test/test_nndsp/: dsptests.h  nntests.h
test/test_nndsp/test_nndsp/: main.c  nntests.h
test/test_nndsp/test_nndsp.xcodeproj/: project.pbxproj
test/test_resample/: main.c
test/testnr/: JumpML_NR_demo.c
test/testnr/testnr.xcodeproj/: project.pbxproj
test/testss/: signalsifter_testvector.h  test_signalsifter.c
test/testss/testss.xcodeproj/: project.pbxproj
